objects/vlocity_ins__DRMapItem__c.object
<CustomObject>
    <description>The Vlocity DataRaptor mapping item describes the transformation of one attribute from the source interface to a target attribute in the target interface or data object.</description>
    <fields>
        <fullName>vlocity_ins__ConfigurationAttribute__c</fullName>
        <label>Configuration Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ConfigurationCategory__c</fullName>
        <label>Configuration Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ConfigurationGroup__c</fullName>
        <label>Configuration Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ConfigurationKey__c</fullName>
        <label>Configuration Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ConfigurationPattern__c</fullName>
        <label>Configuration Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ConfigurationProcess__c</fullName>
        <label>Configuration Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ConfigurationType__c</fullName>
        <label>Configuration Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ConfigurationValue__c</fullName>
        <label>Configuration Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DefaultValue__c</fullName>
        <label>Default Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayType__c</fullName>
        <label>Display Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DomainObjectAPIName__c</fullName>
        <label>Domain Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DomainObjectCreationOrder__c</fullName>
        <label>Domain Object Creation Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DomainObjectFieldAPIName__c</fullName>
        <label>Domain Object Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DomainObjectFieldType__c</fullName>
        <label>Domain Object Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FilterGroup__c</fullName>
        <label>Filter Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FilterOperator__c</fullName>
        <label>Filter Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FilterValue__c</fullName>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FormulaConverted__c</fullName>
        <label>Formula Converted</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FormulaOrder__c</fullName>
        <label>Formula Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FormulaResultPath__c</fullName>
        <label>Formula Result Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Formula__c</fullName>
        <label>Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InterfaceFieldAPIName__c</fullName>
        <label>Interface Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InterfaceObjectLookupOrder__c</fullName>
        <label>Interface Object Lookup Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InterfaceObjectName__c</fullName>
        <label>Interface Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsRequiredForUpsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required For Upsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LinkCreatedField__c</fullName>
        <description>The field from the Creation Object to use. Required if using Link Creation Object.</description>
        <label>Link Created Domain Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LinkCreatedIndex__c</fullName>
        <label>Link Domain Object Creation Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LookupDomainObjectFieldName__c</fullName>
        <label>Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LookupDomainObjectName__c</fullName>
        <label>Lookup Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LookupDomainObjectRequestedFieldName__c</fullName>
        <label>Lookup Requested Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MapId__c</fullName>
        <externalId>true</externalId>
        <label>DR Map Id (Unique)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__TransformValuesMap__c</fullName>
        <label>TransformValuesMap</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UpsertKey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field as a lookup to get first instance when found. Not required to be an External Id.</description>
        <label>Upsert Key</label>
        <type>Checkbox</type>
    </fields>
    <label>Vlocity DataRaptor Map Item</label>
    <nameField>
        <label>Map Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity DataRaptor Map Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>